k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finvault
  labels:
    name: finvault
    environment: production
