k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finvault-backend-service
  namespace: finvault
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8080
