k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finvault-ingress
  namespace: finvault
spec:
  ingressClassName: nginx
  rules:
    - host: finvault.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: finvault-backend-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: finvault-frontend-service
                port:
                  number: 80
